# PortfolioWebApp

./: .gitignore  CMakeLists.txt  PortfolioWebApp.pro  main.cpp  resources.qrc
android/: AndroidManifest.xml  build.gradle
android/res/values/: strings.xml
certs/: android_release.keystore
ios/: Project-Info.plist
qml/: Main.qml  Main.qml.autosave  config.json
qml/controls/: AppToolButton.qml  DetailItem.qml  ImageSpinner.qml  MainListItem.qml  UiAnimation.qml
qml/model/: DataModel.qml
qml/pages/: MainPage.qml
qml/theme/: AppTheme.qml
wasm/: index.html  template.html
